--- a/Java script/js-projects/noIncrement/style.css
+++ b/Java script/js-projects/noIncrement/style.css
@@ -4,6 +4,7 @@
 body{
     width: 100%;
     font-family: 'polysans slim';
+    background-color: rgb(203, 206, 208);
 }
 
 main{
@@ -12,11 +13,14 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4rem;
+    gap: 2rem;
 }
-
+h1{
+    color: rgb(71, 71, 71);
+}
 h2{
-    font-size: 17.5rem;
+    font-size: 15.5rem;
+    color: rgb(83, 83, 83);
 }
 button{
     font-size: 1.2rem;
@@ -26,4 +30,48 @@ button{
     color: rgb(31, 32, 32);
     border-radius: 1rem;
     border: 2px solid black;
+}
+
+/* CSS */
+button {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #3B3B3B;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 20vw; 
+  will-change: transform;
+}
+
+button:disabled {
+  pointer-events: none;
+}
+
+button:hover {
+  background-color: #cacaca;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+button:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
