--- a/Java script/js-projects/chromeExtension/style.css
+++ b/Java script/js-projects/chromeExtension/style.css
@@ -2,6 +2,7 @@
 body{
     font-family: 'polysans slim';
     min-width: 400px;
+    min-height: 600px;
 }
 
 #input-el{
@@ -12,21 +13,35 @@ body{
     padding:0rem 1rem;
     font-size: 1.5rem;
     box-sizing: border-box;
+    border-radius: .8rem;
 }
 
 input[type=text]:focus{
     background: rgb(244, 247, 255);
 }
 
-#input-btn{
+button{
     color: white;
     background: green;
-    font-size: 1.3rem;
-    padding: .8rem 1.6rem;
+    font-size: .8rem;
+    padding: .6rem 1.2rem;
+    font-weight: bold;
     border: none;
     cursor: pointer;
+    border: 2px solid green;
+    border-radius: 1rem;
+    margin-top: .5rem;
 }
-
+#delete-btn{
+    background-color: inherit;
+    border: 2px solid green;
+    color: green;
+    transition: background .3s   ;
+}
+#delete-btn:hover{
+    color: white;
+    background: green;
+}
 ul{
     padding-inline-start: 0rem;
 }
